--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         <div class="container skills" id="skills">
             <div class="container left">
                 <span class="container">
-            		<h1>Hello! 
-            	I'm Bianca avila</h1>
-                <p>An empathetic communicator who seeks challenges to inspire change. In pursuit of my passion for creating meaningful things, I leaped into web-development to start a new chapter in my career as a full-stack developer.</p>
+                    <h1>Hello! 
+                I'm Bianca avila</h1>
+                <p>As a fast learner eager to embraces new technologies, to inspire change through clean design, code, and intuitive experiences I leaped into web-development to start a new chapter in my career as a full-stack developer.
+                </p>
             </span>
                 <div class="container brief">
                     <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
@@ -107,7 +108,7 @@
                 <img src="./icon/node.png">
                 <h1>Express</h1>
                 <p>Dynamic Web Apps with basic CRUD utilizing PostgreSQL</p>
-                <button class="button-project" value="express" >▶︎</button>
+                <button class="button-project" value="express">▶︎</button>
             </div>
         </div>
         <div class="container contact" id="contact">
@@ -116,7 +117,7 @@
             <div class="container brief">
                 <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                 <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
-               <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
+                <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
                 <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
             </div>
             <h2>biancasar93@gmail.com</h2>
@@ -129,7 +130,7 @@
                 <div class="front-end container">
                     <h1>Front-end projects </h1>
                     <p>Responsive Web applications across platforms created with Html-5 and css3 technologies. Each project features minimal and clean aesthetic styles.</p>
-                     <div class=" container individual-project">
+                    <div class=" container individual-project">
                         <img src="./project-img/Habitat-pro.jpg" alt="">
                         <span class="container">
                         <a href="http://www.habitatpro.org/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
@@ -140,16 +141,15 @@
                     <div class=" container individual-project">
                         <img src="./project-img/mail-flex-front-end2.png" alt="">
                         <span class="container">
-        				<a href="https://github.com/bavilari93/mail-flex" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://github.com/bavilari93/mail-flex" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>mail flex template</h1>
                         <p>mail template created with a modern style</p>
                     </span>
                     </div>
-                    
                     <div class=" container individual-project">
                         <img src="./project-img/passion-front-end.png" alt="">
                         <span class="container">
-        				<a href="https://github.com/bavilari93/passion-responsive-" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://github.com/bavilari93/passion-responsive-" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>passion responsive template
                         </h1>
                         <p>Simple yet modern mail template</p>
@@ -158,7 +158,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/lookbook-front-end.png" alt="">
                         <span class="container">
-        				<a href="https://github.com/bavilari93/lookbook" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://github.com/bavilari93/lookbook" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>lookbook</h1>
                         <p>mail template featuring a combination of minimal and product center design </p>
                     </span>
@@ -166,7 +166,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/architecture.png" alt="">
                         <span class="container">
-        				<a href="https://github.com/bavilari93/architecture-form" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://github.com/bavilari93/architecture-form" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>clean concept</h1>
                         <p>clean landing page</p>
                     </span>
@@ -190,7 +190,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/random.png" alt="">
                         <span class="container">
-        				<a href="https://git.generalassemb.ly/pages/bavilari93/Game-Project-1-Bianca-Avila/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://git.generalassemb.ly/pages/bavilari93/Game-Project-1-Bianca-Avila/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>random game</h1>
                         <p>Optimized front-end web application developed to challenge logic and basic math knowledge as a guessing game</p>
                     </span>
@@ -202,7 +202,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/wanderer.png" alt="">
                         <span class="container">
-        				<a href="https://gorgeous-voyageurs-44388.herokuapp.com/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://gorgeous-voyageurs-44388.herokuapp.com/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>Wanderer</h1> 
                         <p>
                         Restful traveling app that integrates a flexible CRUD user interphase to provide a relevant information regarding travel destination.<br>
@@ -215,7 +215,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/barkbook.png" alt="">
                         <span class="container">
-        				<a href="https://git.generalassemb.ly/proj3/rails_app" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://git.generalassemb.ly/proj3/rails_app" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>BarkBook</h1> 
                         <p>
                         Ruby on Rails dynamic web app with full CRUD utilizing a friend relationship database with Mysql.Allowing the user to see friends profile and comment on their events and saved locations</p>
@@ -224,7 +224,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/apetit.png" alt="">
                         <span class="container">
-        				<a href="https://github.com/bavilari93/Final-Project-GA" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://github.com/bavilari93/Final-Project-GA" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>APETIT</h1> 
                         <p>
                         Full-Stack React.js application featuring CRUD user interface with authentication.The web app premise is to suggest most voted restaurants nearby to the user's location. </p>
@@ -245,7 +245,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/apetit.png" alt="">
                         <span class="container">
-        				<a href="https://github.com/bavilari93/Final-Project-GA" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://github.com/bavilari93/Final-Project-GA" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>APETIT</h1> 
                         <p>
                         Full-Stack React.js application featuring CRUD user interface with  authentication.The web app premise is to suggest most voted restaurants nearby tothe user's location. </p>
@@ -257,7 +257,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/wanderer.png" alt="">
                         <span class="container">
-        				<a href="https://gorgeous-voyageurs-44388.herokuapp.com/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://gorgeous-voyageurs-44388.herokuapp.com/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>Wanderer</h1> 
                         <p>
                         Restful traveling app that integrates a flexible CRUD user interphase to provide a relevant information regarding travel destination.<br>
