--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <div class="wrap">
         <!-- nav bar  -->
         <div class="top-nav" id="myTopNav">
-            <a href="#skills">About</a>
+              <a href="#contact">About</a>
+            <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+          
             <a href="javascript:void(0);" class="icon"> &#9776;</a>
         </div>
         <div class="container main">
@@ -26,63 +27,9 @@
             <a href="mailto:biancasar93@gmail.com">
                 <button>Let's work together</button>
             </a>
+
         </div>
-        <div class="container skills" id="skills">
-            <div class="container left">
-                <span class="container">
-                    <h1>Hello! 
-                I'm Bianca avila</h1>
-                <p>As a fast learner eager to embraces new technologies, to inspire change through clean design, code, and intuitive experiences I leaped into web-development to start a new chapter in my career as a full-stack developer.
-                </p>
-            </span>
-                <div class="container brief">
-                    <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
-                    <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
-                    <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
-                    <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
-                </div>
-                <h1>Some Awesome Skills</h1>
-                <div class="container skill">
-                    <div class="container sub-skill">front-end ▶︎</div>
-                    <div class="container sub-skill">
-                        <ul>
-                            <li>html-5</li>
-                            <li>css-3</li>
-                            <li>javaScript</li>
-                            <li>ruby</li>
-                            <li>react.js</li>
-                        </ul>
-                    </div>
-                    <div class="container sub-skill">back-end ▶︎</div>
-                    <div class="container sub-skill">
-                        <ul>
-                            <li>node.js</li>
-                            <li>psql</li>
-                            <li>rails</li>
-                            <li>ruby</li>
-                        </ul>
-                    </div>
-                    <div class="container sub-skill">graphic design ▶︎</div>
-                    <div class="container sub-skill">
-                        <ul>
-                            <li>DreamWeaver</li>
-                            <li>Illustrator</li>
-                            <li>Photoshop</li>
-                            <li>indesign</li>
-                            <li>After Effects</li>
-                        </ul>
-                    </div>
-                    <div class="container sub-skill">marketing ▶︎ </div>
-                    <div class="container sub-skill">
-                        <ul>
-                            <li>Social Media Management</li>
-                            <li>Public Relations</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container project-title" id="projects">
+         <div class="container project-title" id="projects">
             <h1>Projects</h1>
         </div>
         <div class="container portafolio">
@@ -108,20 +55,66 @@
                 <img src="./icon/node.png">
                 <h1>Express</h1>
                 <p>Dynamic Web Apps with basic CRUD utilizing PostgreSQL</p>
-                <button class="button-project" value="express">▶︎</button>
+                <button class="button-project" value="express">▶</button>
             </div>
         </div>
+        <div class="container project-title" id="skills">
+            <h1>Skills</h1>
+        </div>
+        <div class="container skills" >
+                <div class="container skill">
+                    <div class="container sub-skill">front-end </div>
+                    <div class="container sub-skill">
+                        <ul>
+                            <li>html-5</li>
+                            <li>css-3</li>
+                            <li>javaScript</li>
+                            <li>ruby</li>
+                            <li>react.js</li>
+                        </ul>
+                    </div>
+                    <div class="container sub-skill">back-end </div>
+                    <div class="container sub-skill">
+                        <ul>
+                            <li>node.js</li>
+                            <li>psql</li>
+                            <li>rails</li>
+                            <li>ruby</li>
+                        </ul>
+                    </div>
+                    <div class="container sub-skill">graphic design </div>
+                    <div class="container sub-skill">
+                        <ul>
+                            <li>DreamWeaver</li>
+                            <li>Illustrator</li>
+                            <li>Photoshop</li>
+                            <li>indesign</li>
+                            <li>After Effects</li>
+                        </ul>
+                    </div>
+                    <div class="container sub-skill">marketing </div>
+                    <div class="container sub-skill">
+                        <ul>
+                            <li>Social Media Management</li>
+                            <li>Public Relations</li>
+                        </ul>
+                    </div>
+                </div>
+        </div>
+       
         <div class="container contact" id="contact">
-            <div>
-            </div>
+            <img src="./project-img/bianca_avila_photo.png"/>
+             <span class="container">
+                <p>As a fast learner eager to embrace new technologies to inspire change through clean design, code, and intuitive experiences I leaped into web-development to start a new chapter in my career as a full-stack developer.
+                </p>
+            </span>
             <div class="container brief">
                 <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                 <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
                 <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
                 <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
             </div>
-            <h2>biancasar93@gmail.com</h2>
-            <h1>contact me</h1>
+            <h1>About Me</h1>
         </div>
         <!-- modal box of projects -->
         <div id="modal" class="project-modal">
