--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <div class="wrap">
         <!-- nav bar  -->
         <div class="top-nav" id="myTopNav">
-              <a href="#contact">About</a>
+            <a href="#contact">About</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
-          
             <a href="javascript:void(0);" class="icon"> &#9776;</a>
         </div>
         <div class="container main">
@@ -27,9 +26,8 @@
             <a href="mailto:biancasar93@gmail.com">
                 <button>Let's work together</button>
             </a>
-
         </div>
-         <div class="container project-title" id="projects">
+        <div class="container project-title" id="projects">
             <h1>Projects</h1>
         </div>
         <div class="container portafolio">
@@ -61,51 +59,50 @@
         <div class="container project-title" id="skills">
             <h1>Skills</h1>
         </div>
-        <div class="container skills" >
-                <div class="container skill">
-                    <div class="container sub-skill">front-end </div>
-                    <div class="container sub-skill">
-                        <ul>
-                            <li>html-5</li>
-                            <li>css-3</li>
-                            <li>javaScript</li>
-                            <li>ruby</li>
-                            <li>react.js</li>
-                        </ul>
-                    </div>
-                    <div class="container sub-skill">back-end </div>
-                    <div class="container sub-skill">
-                        <ul>
-                            <li>node.js</li>
-                            <li>psql</li>
-                            <li>rails</li>
-                            <li>ruby</li>
-                        </ul>
-                    </div>
-                    <div class="container sub-skill">graphic design </div>
-                    <div class="container sub-skill">
-                        <ul>
-                            <li>DreamWeaver</li>
-                            <li>Illustrator</li>
-                            <li>Photoshop</li>
-                            <li>indesign</li>
-                            <li>After Effects</li>
-                        </ul>
-                    </div>
-                    <div class="container sub-skill">marketing </div>
-                    <div class="container sub-skill">
-                        <ul>
-                            <li>Social Media Management</li>
-                            <li>Public Relations</li>
-                        </ul>
-                    </div>
+        <div class="container skills">
+            <div class="container skill">
+                <div class="container sub-skill">front-end </div>
+                <div class="container sub-skill">
+                    <ul>
+                        <li>html-5</li>
+                        <li>css-3</li>
+                        <li>javaScript</li>
+                        <li>ruby</li>
+                        <li>react.js</li>
+                    </ul>
                 </div>
+                <div class="container sub-skill">back-end </div>
+                <div class="container sub-skill">
+                    <ul>
+                        <li>node.js</li>
+                        <li>psql</li>
+                        <li>rails</li>
+                        <li>ruby</li>
+                    </ul>
+                </div>
+                <div class="container sub-skill">graphic design </div>
+                <div class="container sub-skill">
+                    <ul>
+                        <li>DreamWeaver</li>
+                        <li>Illustrator</li>
+                        <li>Photoshop</li>
+                        <li>indesign</li>
+                        <li>After Effects</li>
+                    </ul>
+                </div>
+                <div class="container sub-skill">marketing </div>
+                <div class="container sub-skill">
+                    <ul>
+                        <li>Social Media Management</li>
+                        <li>Public Relations</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-       
         <div class="container contact" id="contact">
-            <img src="./project-img/bianca_avila_photo.png"/>
-             <span class="container">
-                <p>As a fast learner eager to embrace new technologies to inspire change through clean design, code, and intuitive experiences I leaped into web-development to start a new chapter in my career as a full-stack developer.
+            <img src="./project-img/bianca_avila_photo.png" />
+            <span class="container">
+                <p>안녕! I'm Bianca Avila  a fast learner eager to embrace new technologies to inspire change through clean design, code, and intuitive experiences.  In pursuit of my passion for creating meaningful and relatable things,    I leaped into web development to start a new chapter in my career as a full-stack developer 
                 </p>
             </span>
             <div class="container brief">
