--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="container contact" id="contact">
             <img src="./project-img/bianca_avila_photo.png" />
             <span class="container">
-                <p>안녕! I'm Bianca Avila  a fast learner eager to embrace new technologies to inspire change through clean design, code, and intuitive experiences.  In pursuit of my passion for creating meaningful and relatable things,    I leaped into web development to start a new chapter in my career as a full-stack developer 
+                <p>안녕! I'm Bianca Avila  a fast learner eager to embrace new technologies to inspire change through clean design, code, and intuitive experiences.  In pursuit of my passion for creating meaningful and relatable things,    I leaped into web development to start a new chapter in my career as a full-stack developer. 
                 </p>
             </span>
             <div class="container brief">
