--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <img src="./project-img/React-landing-page.jpg" alt="">
                         <span class="container">
                         <a href="https://github.com/bavilari93/landingPageReact" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
-                        <h1>APETIT</h1> 
+                        <h1>Progress Template</h1> 
                         <p>
                         Landing web page featuring an intuitive navigation framework</p>
                     </span>
