--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         <div class="container main">
             <h2>Bianca Avila</h2>
             <h1>Full-Stack Developer</h1>
-            <p></p>
+              <div class="container brief grayscale">
+                <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
+                <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
+                <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
+            </div>
             <a href="mailto:biancasar93@gmail.com">
                 <button>Let's work together</button>
             </a>
