--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="./icon/node.png">
                 <h1>Express</h1>
                 <p>Dynamic Web Apps with basic CRUD utilizing PostgreSQL</p>
-                <button class="button-project" value="express">▶</button>
+                <button class="button-project" value="express">▶︎</button>
             </div>
         </div>
         <div class="container project-title" id="skills">
