--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
                 <img src="./icon/front-end.png">
                 <h1>Front-End </h1>
                 <p>responsive web applications across platforms</p>
-                <button class="button-project" value="front-end">▶︎</button>
+                <button class="button-project" value="front-end">▷</button>
             </div>
             <div class="container project">
                 <img src="./icon/full_stack.png">
                 <h1>Full-Stack</h1>
                 <p>RESTful web apps integrating flexible CRUD user interphase.</p>
-                <button class="button-project" value="full-stack">▶︎</button>
+                <button class="button-project" value="full-stack">▷</button>
             </div>
             <div class="container project">
                 <img src="./icon/react-native.png">
                 <h1>React.js</h1>
                 <p>seamless user experience Web apps</p>
-                <button class="button-project" value="react">▶︎</button>
+                <button class="button-project" value="react">▷</button>
             </div>
             <div class=" container project">
                 <img src="./icon/node.png">
                 <h1>Express</h1>
                 <p>Dynamic Web Apps with basic CRUD utilizing PostgreSQL</p>
-                <button class="button-project" value="express">▶︎</button>
+                <button class="button-project" value="express">▷</button>
             </div>
         </div>
         <div class="container project-title" id="skills">
