--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/Habitat-pro.jpg" alt="">
                         <span class="container">
-                        <a href="http://www.habitatpro.org/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="http://www.habitatpro.org/" target="_blank"> <img class="icon" src="./img/web.png"></a>
                         <h1>Habitat Pro</h1>
                         <p>Created social media UI/UX with the premise of resonating the voice of indigenous peoples</p>
                     </span>
@@ -197,7 +197,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/wanderer.png" alt="">
                         <span class="container">
-                        <a href="https://gorgeous-voyageurs-44388.herokuapp.com/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://gorgeous-voyageurs-44388.herokuapp.com/" target="_blank"> <img class="icon" src="./img/web.png"></a>
                         <h1>Wanderer</h1> 
                         <p>
                         Restful traveling app that integrates a flexible CRUD user interphase to provide a relevant information regarding travel destination.<br>
@@ -252,7 +252,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/wanderer.png" alt="">
                         <span class="container">
-                        <a href="https://gorgeous-voyageurs-44388.herokuapp.com/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://gorgeous-voyageurs-44388.herokuapp.com/" target="_blank"> <img class="icon" src="./img/web.png"></a>
                         <h1>Wanderer</h1> 
                         <p>
                         Restful traveling app that integrates a flexible CRUD user interphase to provide a relevant information regarding travel destination.<br>
