--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
                     <div class=" container individual-project">
                         <img src="./project-img/mail-flex-front-end2.png" alt="">
                         <span class="container">
+                    <div class="icon-container">
+                        <a href="https://bavilari93.github.io/mail-flex" target="_blank"> <img class="icon" src="./img/web.png"></a>
                         <a href="https://github.com/bavilari93/mail-flex" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                    </div>
                         <h1>mail flex template</h1>
                         <p>mail template created with a modern style</p>
                     </span>
@@ -185,7 +188,7 @@
                     <div class=" container individual-project">
                         <img src="./project-img/random.png" alt="">
                         <span class="container">
-                        <a href="https://git.generalassemb.ly/pages/bavilari93/Game-Project-1-Bianca-Avila/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <a href="https://git.generalassemb.ly/pages/bavilari93/Game-Project-1-Bianca-Avila/" target="_blank"><img class="icon" src="./img/web.png"></a>
                         <h1>random game</h1>
                         <p>Optimized front-end web application developed to challenge logic and basic math knowledge as a guessing game</p>
                     </span>
