--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container main">
             <h2>Bianca Avila</h2>
             <h1>Full-Stack Developer</h1>
-              <div class="container brief grayscale">
+            <div class="container brief grayscale">
                 <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                 <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
                 <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
@@ -32,92 +32,98 @@
                 <button>Let's work together</button>
             </a>
         </div>
-        <div class="container project-title" id="projects">
-            <h1>Projects</h1>
-        </div>
-        <div class="container portafolio">
-            <div class="container project">
-                <img src="./icon/front-end.png">
-                <h1>Front-End </h1>
-                <p>responsive web applications across platforms</p>
-                <button class="button-project" value="front-end">▷</button>
+        <section>
+            <div class="container project-title" id="projects">
+                <h1>Projects</h1>
             </div>
-            <div class="container project">
-                <img src="./icon/full_stack.png">
-                <h1>Full-Stack</h1>
-                <p>RESTful web apps integrating flexible CRUD user interphase.</p>
-                <button class="button-project" value="full-stack">▷</button>
-            </div>
-            <div class="container project">
-                <img src="./icon/react-native.png">
-                <h1>React.js</h1>
-                <p>seamless user experience Web apps</p>
-                <button class="button-project" value="react">▷</button>
-            </div>
-            <div class=" container project">
-                <img src="./icon/node.png">
-                <h1>Express</h1>
-                <p>Dynamic Web Apps with basic CRUD utilizing PostgreSQL</p>
-                <button class="button-project" value="express">▷</button>
-            </div>
-        </div>
-        <div class="container project-title" id="skills">
-            <h1>Skills</h1>
-        </div>
-        <div class="container skills">
-            <div class="container skill">
-                <div class="container sub-skill">front-end </div>
-                <div class="container sub-skill">
-                    <ul>
-                        <li>html-5</li>
-                        <li>css-3</li>
-                        <li>javaScript</li>
-                        <li>ruby</li>
-                        <li>react.js</li>
-                    </ul>
+            <div class="container portafolio">
+                <div class="container project">
+                    <img src="./icon/front-end.png">
+                    <h1>Front-End </h1>
+                    <p>responsive web applications across platforms</p>
+                    <button class="button-project" value="front-end">▷</button>
                 </div>
-                <div class="container sub-skill">back-end </div>
-                <div class="container sub-skill">
-                    <ul>
-                        <li>node.js</li>
-                        <li>psql</li>
-                        <li>rails</li>
-                        <li>ruby</li>
-                    </ul>
+                <div class="container project">
+                    <img src="./icon/full_stack.png">
+                    <h1>Full-Stack</h1>
+                    <p>RESTful web apps integrating flexible CRUD user interphase.</p>
+                    <button class="button-project" value="full-stack">▷</button>
                 </div>
-                <div class="container sub-skill">graphic design </div>
-                <div class="container sub-skill">
-                    <ul>
-                        <li>DreamWeaver</li>
-                        <li>Illustrator</li>
-                        <li>Photoshop</li>
-                        <li>indesign</li>
-                        <li>After Effects</li>
-                    </ul>
+                <div class="container project">
+                    <img src="./icon/react-native.png">
+                    <h1>React.js</h1>
+                    <p>seamless user experience Web apps</p>
+                    <button class="button-project" value="react">▷</button>
                 </div>
-                <div class="container sub-skill">marketing </div>
-                <div class="container sub-skill">
-                    <ul>
-                        <li>Social Media Management</li>
-                        <li>Public Relations</li>
-                    </ul>
+                <div class=" container project">
+                    <img src="./icon/node.png">
+                    <h1>Express</h1>
+                    <p>Dynamic Web Apps with basic CRUD utilizing PostgreSQL</p>
+                    <button class="button-project" value="express">▷</button>
                 </div>
             </div>
-        </div>
-        <div class="container contact" id="contact">
-            <img src="./project-img/bianca_avila_photo.png" />
-            <span class="container">
+        </section>
+        <section>
+            <div class="container project-title" id="skills">
+                <h1>Skills</h1>
+            </div>
+            <div class="container skills">
+                <div class="container skill">
+                    <div class="container sub-skill">front-end </div>
+                    <div class="container sub-skill">
+                        <ul>
+                            <li>html-5</li>
+                            <li>css-3</li>
+                            <li>javaScript</li>
+                            <li>ruby</li>
+                            <li>react.js</li>
+                        </ul>
+                    </div>
+                    <div class="container sub-skill">back-end </div>
+                    <div class="container sub-skill">
+                        <ul>
+                            <li>node.js</li>
+                            <li>psql</li>
+                            <li>rails</li>
+                            <li>ruby</li>
+                        </ul>
+                    </div>
+                    <div class="container sub-skill">graphic design </div>
+                    <div class="container sub-skill">
+                        <ul>
+                            <li>DreamWeaver</li>
+                            <li>Illustrator</li>
+                            <li>Photoshop</li>
+                            <li>indesign</li>
+                            <li>After Effects</li>
+                        </ul>
+                    </div>
+                    <div class="container sub-skill">marketing </div>
+                    <div class="container sub-skill">
+                        <ul>
+                            <li>Social Media Management</li>
+                            <li>Public Relations</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container contact" id="contact">
+                <img src="./project-img/bianca_avila_photo.png" />
+                <span class="container">
                 <p>안녕! I'm Bianca Avila  a fast learner eager to embrace new technologies to inspire change through clean design, code, and intuitive experiences.  In pursuit of my passion for creating meaningful and relatable things,    I leaped into web development to start a new chapter in my career as a full-stack developer. 
                 </p>
             </span>
-            <div class="container brief">
-                <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
-                <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
-                <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
-                <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
+                <div class="container brief">
+                    <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                    <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
+                    <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
+                    <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
+                </div>
+                <h1>About Me</h1>
             </div>
-            <h1>About Me</h1>
-        </div>
+        </section>
         <!-- modal box of projects -->
         <div id="modal" class="project-modal">
             <span class="close">&times;</span>
