--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="#projects">Projects</a>
             <a href="javascript:void(0);" class="icon"> &#9776;</a>
         </div>
-        <div class="container main">
-            <h2>Bianca Avila</h2>
+        <div id ="main"class="container">
+            <h2 >Bianca Avila</h2>
             <h1>Full-Stack Developer</h1>
             <div class="container brief grayscale">
                 <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
@@ -112,7 +112,7 @@
             <div class="container contact" id="contact">
                 <img src="./project-img/bianca_avila_photo.png" />
                 <span class="container">
-                <p>안녕! I'm Bianca Avila  a fast learner eager to embrace new technologies to inspire change through clean design, code, and intuitive experiences.  In pursuit of my passion for creating meaningful and relatable things,    I leaped into web development to start a new chapter in my career as a full-stack developer. 
+                <p>안녕! I'm Bianca Avila  a fast learner eager to embrace new technologies to inspire change through clean design, DRY code, and intuitive experiences.  In pursuit of my passion for creating meaningful and relatable things, I leaped into web development to start a new chapter in my career as a full-stack developer. 
                 </p>
             </span>
                 <div class="container brief">
