--- a/index.html
+++ b/index.html
@@ -3,34 +3,42 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bianca Avila</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
-    </script>
-    <script type="text/javascript" src="./index.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="index.js" type="text/javascript"></script>
+    <title>Animated desing </title>
 </head>
 
 <body>
     <div class="wrap">
-        <!-- nav bar  -->
         <div class="top-nav" id="myTopNav">
-            <a href="#contact">About</a>
-            <a href="#skills">Skills</a>
-            <a href="#projects">Projects</a>
-            <a href="javascript:void(0);" class="icon"> &#9776;</a>
-        </div>
-        <div id ="main"class="container">
-            <h2 >Bianca Avila</h2>
-            <h1>Full-Stack Developer</h1>
-            <div class="container brief grayscale">
-                <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
-                <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
-                <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
-                <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
+            <div class="icon">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
             </div>
-            <a href="mailto:biancasar93@gmail.com">
-                <button>Let's work together</button>
-            </a>
+            <div class="modal-container ">
+                <a href="#contact">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
+            </div>
+            
+        </div>
+        <div id='parallax' class='container'>
+            <div id='main' class='tittle container'>
+                <h2>Bianca Avila</h2>
+                <h1>Full-Stack Developer</h1>
+                <div class="container brief grayscale">
+                    <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                    <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
+                    <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
+                    <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
+                </div>
+                <a href="mailto:biancasar93@gmail.com">
+                    <button>Let's work together</button>
+                </a>
+            </div>
         </div>
         <section>
             <div class="container project-title" id="projects">
