--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="index.js" type="text/javascript"></script>
-    <title>Animated desing </title>
+    <title>Bianca Avila </title>
 </head>
 
 <body>
