--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="bar2"></div>
                 <div class="bar3"></div>
             </div>
-            <div class="modal-container ">
+            <div id="modal-topnav">
                 <a href="#contact">About</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
