--- a/index.html
+++ b/index.html
@@ -4,27 +4,40 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="index.js" type="text/javascript"></script>
     <title>Bianca Avila </title>
 </head>
 
 <body>
-    <div class="wrap">
-        <div class="top-nav" id="myTopNav">
+               <div id="topNav" class="navbar">
+            <!-- open close icon -->
             <div class="icon">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
                 <div class="bar3"></div>
             </div>
-            <div id="modal-topnav">
+            <!-- add search -->
+            <!-- inner nav that appear  on click -->
+            <div id="innerNav" class="inner-nav">
+                <div class="social-icons">
+                    <div class="a"><a href="https://github.com/bavilari93?tab=repositories" target="_blank"><img src="./img/github-social-media.png" alt=""></a></div>
+                    <div class="a"><a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img src="./img/linkedin-social-media.png" alt=""></a></div>
+                    <div class="a"><a href="./docs/resume_bianca_avila.pdf" target="_blank"> <img src="./img/cv-social-media.png" alt=""></a></div>
+                    <div class="a"><a href="mailto:biancasar93@gmail.com"> <img src="./img/email-social-media.png" alt=""></a></div>
+            </div>
+            <div class="content">
                 <a href="#contact">About</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
             </div>
-            
+
         </div>
+        <!-- end of inner content -->
+        </div>
+        <!-- end of top nav bar -->
+    <div id="mainWrap" class="wrap">
         <div id='parallax' class='container'>
             <div id='main' class='tittle container'>
                 <h2>Bianca Avila</h2>
