--- a/index.html
+++ b/index.html
@@ -11,32 +11,35 @@
 </head>
 
 <body>
-               <div id="topNav" class="navbar">
-            <!-- open close icon -->
-            <div class="icon">
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
+    <div id="topNav" class="navbar">
+        <!-- open close icon -->
+        <div class="icon">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+        <!-- add search -->
+        <!-- inner nav that appear  on click -->
+        <div id="innerNav" class="inner-nav">
+            <div class="social-icons">
+                <div class="a"><a href="https://github.com/bavilari93?tab=repositories" target="_blank"><img src="./img/github-social-media.png" alt=""></a></div>
+                <div class="a"><a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img src="./img/linkedin-social-media.png" alt=""></a></div>
+                <div class="a"><a href="./docs/resume_bianca_avila.pdf" target="_blank"> <img src="./img/cv-social-media.png" alt=""></a></div>
+                <div class="a"><a href="mailto:biancasar93@gmail.com"> <img src="./img/email-social-media.png" alt=""></a></div>
             </div>
-            <!-- add search -->
-            <!-- inner nav that appear  on click -->
-            <div id="innerNav" class="inner-nav">
-                <div class="social-icons">
-                    <div class="a"><a href="https://github.com/bavilari93?tab=repositories" target="_blank"><img src="./img/github-social-media.png" alt=""></a></div>
-                    <div class="a"><a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img src="./img/linkedin-social-media.png" alt=""></a></div>
-                    <div class="a"><a href="./docs/resume_bianca_avila.pdf" target="_blank"> <img src="./img/cv-social-media.png" alt=""></a></div>
-                    <div class="a"><a href="mailto:biancasar93@gmail.com"> <img src="./img/email-social-media.png" alt=""></a></div>
+            <div class="side-nav">
+                <div class="content">
+                    <a href="#contact">About</a>
+                    <a href="#skills">Skills</a>
+                    <a href="#projects">Projects</a>
+                </div>
+                <div class="nav-email"><h1>biancasar93@gmail.com</h1>
+                </div>
             </div>
-            <div class="content">
-                <a href="#contact">About</a>
-                <a href="#skills">Skills</a>
-                <a href="#projects">Projects</a>
-            </div>
-
         </div>
         <!-- end of inner content -->
-        </div>
-        <!-- end of top nav bar -->
+    </div>
+    <!-- end of top nav bar -->
     <div id="mainWrap" class="wrap">
         <div id='parallax' class='container'>
             <div id='main' class='tittle container'>
