--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <img src="./project-img/mail-flex-front-end2.png" alt="">
                         <span class="container">
                     <div class="icon-container">
-                        <a href="https://bavilari93.github.io/mail-flex" target="_blank"> <img class="icon" src="./img/web.png"></a>
+                        <a href="https://bavilari93.github.io/mail-flex/index.html" target="_blank"> <img class="icon" src="./img/web.png"></a>
                         <a href="https://github.com/bavilari93/mail-flex" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                     </div>
                         <h1>mail flex template</h1>
