--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="square">
                     <a href="#"><img src="./icon/dreamweaver.png" alt="dreamweaver"></a>
                     <a href="#"><img src="./icon/illustrator.png" alt="illustrator"></a>
-                    <a href="#"><img src="./icon/photoshop.png" alt="photoshop"></a>
+                    <a href="#"><img src="./icon/Photoshop.png" alt="photoshop"></a>
                     <a href="#"><img src="./icon/indesign.png" alt="indesign"></a>
                     <h1>GRAPHIC DESIGN</h1>
                 </div>
