--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </section>
                 <section>
                     <img src="./images/about/ga.png" alt="">
-                    <p>Immerse in the most gratifying journey of <br><span>Web Development</span></p>
+                    <p>Immersed in the most gratifying journey of <br><span>Web Development</span></p>
                 </section>
             </div>
             <h3>looking forward to meeting you!</h3>
