--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="main-container">
         <div id="mainWrap">
             <!-- nav -->
             <nav>
