--- a/index.html
+++ b/index.html
@@ -140,6 +140,28 @@
                     </section>
                 </section>
                 <section class="project">
+                    <img class="slideanim" src="./images/project-img/fincaliquidambar.png" alt="">
+                    <section>
+                        <p>Designed and deployed from local enviroment to production on wordpress User interfase for showcasing a fresh brand identity </p>
+                        <section class="side-container">
+                            <a href="https://fincaliquidambar.hn/" target="_blank"><i class="fas fa-columns"></i></a>
+                        </section>
+                    </section>
+                </section>
+                <section class="project">
+                    <img src="./images/project-img/yorli.png" alt="">
+                    <section>
+                        <p>Responsive minimal design showcasing lasted work and persona through visuals.
+                            <br>
+                            <br>
+                            Technologies: JavaScript,JQuery HTML-5, SASS</p>
+                        <section class="side-container">
+                            <a href="https://yorliethavila.com" target="_blank"><i class="fas fa-columns"></i></a>
+                            <a href="https://github.com/bavilari93/yorliethavila" target="_blank"><i class="fab fa-github"></i></a>
+                        </section>
+                    </section>
+                </section>
+                <section class="project">
                     <img src="./images/project-img/nomadic.png" alt="">
                     <section>
                         <p>Cross browser compatible and mobile friendly website enhanced by a dinamic layout.
@@ -147,7 +169,7 @@
                             <br>
                             Technologies: JavaScript,JQuery HTML-5, CSS</p>
                         <section class="side-container">
-                            <a href="hhttps://bavilari93.github.io/travel-template/" target="_blank"><i class="fas fa-columns"></i></a>
+                            <a href="https://bavilari93.github.io/travel-template/" target="_blank"><i class="fas fa-columns"></i></a>
                             <a href="https://github.com/bavilari93/travel-template" target="_blank"><i class="fab fa-github"></i></a>
                         </section>
                     </section>
